# verification-ecology-kit

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: workflow.yml
docs/: api.md  audits.md  cli.md  concepts.md  conformance.md  data_model.md  examples.md  formal_claims.md  formal_semantics.md  glossary.md  index.md  pre_publication_audit.md  pyproject-publishing.md  quickstart.md  release_gates.md  release_readiness.md  schemas.md  security.md  semantic_boundary.md  theory_mapping.md  v1_audit.md  v1_readiness.md
examples/: authority_gate.py  basic_packet.py  external_packet_quarantine.py  federated_bundle.py  operational_bundle.py  overclosure_audit.py  reachability_certificate.py  residual_ledger.py  runtime_loop.py  schema_migration.py
formal/: CLAIMS.md  README.md
formal/lean/: lake-manifest.json  lakefile.lean
formal/lean/VETCore/: Aperture.lean  Authority.lean  Examples.lean  Invariants.lean  Residual.lean  Runtime.lean  Semantics.lean  Syntax.lean  Theorems.lean  WellFormed.lean
formal/tla/: README.md  VETRuntime.cfg  VETRuntime.tla
scripts/: check_formal_claims.py  check_formal_coverage.py  check_v1_readiness.py  generate_schema_docs.py  generate_theory_mapping.py  scan_local_info.py  smoke_install_wheel.py  verify_no_secrets.py  verify_package_contents.py
security/: allowlist.example.toml  allowlist.toml
src/verification_ecology_kit/: __init__.py  canonicalization.py  cli.py  digest.py  errors.py  formal_bridge.py  ids.py  references.py  result.py  serde.py
src/verification_ecology_kit/audit/: __init__.py  adversarial_ingress.py  allowlist.py  aperture_regression.py  local_info.py  monoculture.py  packet_ecology.py  reports.py  residual_metabolism.py  schema_overclosure.py  security.py
src/verification_ecology_kit/model/: __init__.py  aperture.py  authority.py  boundaries.py  certification.py  circulation.py  conformance.py  contracts.py  ecology_state.py  frontier.py  history.py  judgments.py  ledger.py  lifecycle.py  maturity.py  overclosure.py  packets.py  reachability.py  records.py  registries.py  residuals.py  semantics.py  serde.py
src/verification_ecology_kit/operations/: __init__.py  base.py  compose.py  contrast.py  fork.py  generalize.py  internalize.py  quarantine.py  redact.py  repair.py  retire.py  specialize.py
src/verification_ecology_kit/ports/: __init__.py  checker.py  clock.py  generator.py  policy.py  reporter.py  storage.py
src/verification_ecology_kit/runtime/: __init__.py  engine.py  in_memory.py  json_store.py  loop.py  policies.py
src/verification_ecology_kit/schemas/: aperture.schema.json  (+39 more)
tests/fixtures/: minimal_bundle.json
tests/formal/: test_formal_claims.py  test_formal_coverage.py  test_formal_trace_export.py  test_lean_files_exist.py  test_python_operation_conformance.py
tests/golden/: authority_denial_due_to_stale_support.json  counter_packet_boundary_gap.json  external_packet_quarantine.json  formal_coverage.expected.json  invalid_digest.json  minimal_core_bundle.json  missing_counter_packet_residual.json  overclosure_witness.json  runtime_history_residual.json  schema_overclosure_residual.json  stale_checker.json  theory_coverage.expected.json  unresolved_reference.json
tests/integration/: test_cli.py  test_cli_extended.py
tests/property/: test_properties.py
tests/security/: test_scanners.py
tests/unit/: test_audits_runtime.py  test_branch_coverage.py  test_canonical_digest_refs.py  test_cli_json_loaders.py  test_conformance_authority.py  test_extended_models.py  test_golden_fixtures.py  test_history_ledger.py  test_model_serde.py  test_packets_operations.py  test_records_lifecycle.py  test_semantic_profiles_and_serde.py  test_semantic_regressions.py
(+13 files in other folders)
